# nturt_vcu

./: CMakeLists.txt  Kconfig  Kconfig.hardware  app.overlay  prj.conf  west.yml
include/vcu/: dashboard.h  err.h  msg.h  telemetry.h
include/vcu/canbus/: convert.h
include/vcu/ctrl/: ctrl.h  inv.h  params.h  states.h
include/vcu/dt-bindings/: dashboard.h
include/vcu/msg/: msg.h
src/: main.c
src/canopen/: CMakeLists.txt  Kconfig  msg.c  telemetry.c
src/canopen/objdict/: OD.c  OD.h
src/ctrl/: CMakeLists.txt  Kconfig  acc.c  ctrl.c  inv.c  iterable_sections.ld  rtd_sound.c  settings.c  shell.c  states.c
src/ctrl/simulink/: commemd.txt  const_params.c  div_nde_s32_floor.c  div_nde_s32_floor.h  look1_binlc.c  look1_binlc.h  look1_binlca.c  look1_binlca.h  look1_binlx.c  look1_binlx.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_hypotd_snf.c  rt_hypotd_snf.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  sensor_fusion.c  sensor_fusion.h  simulink_import.h  vehicle_control.c  vehicle_control.h  vehicle_control_data.c
src/ctrl/states/: CMakeLists.txt  Kconfig  err.c  rtd_sound.c  shell.c  states.c
src/dashboard/: CMakeLists.txt  Kconfig  dashboard.c  dashboard.h  normal.c  peripherals.c  settings.c  shell.c  test.c
src/dashboard/display/: CMakeLists.txt  Kconfig  display.c  logo.c
src/dashboard/modes/: CMakeLists.txt  modes.h  normal.c  test.c  (+1 more)
src/msg/: CMakeLists.txt  Kconfig  logging.c  msg.c
src/perception/: CMakeLists.txt  Kconfig
src/sys/: CMakeLists.txt  Kconfig
src/telemetry/: CMakeLists.txt  Kconfig  msg.c  telemetry.c
(+13 files in other folders)
